--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cz.cuni.mff.bc.server.strategies.TestKnapsack
+main.class=cz.cuni.mff.bc.server.ServerMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
