--- a/server.config.properties
+++ b/server.config.properties
@@ -1,4 +1,4 @@
-#Mon Mar 03 18:17:57 GMT 2014
+#Mon Mar 17 00:06:59 GMT 2014
 port=1099
+tasklimit=5
 strategy=HIGHEST_PRIORITY_FIRST
-basedir=C\:\\Users\\Jakub\\DCSN_base
