Highest priority first reasonable update

--- a/server.config.properties
+++ b/server.config.properties
@@ -1,4 +1,5 @@
-#Mon Mar 17 00:06:59 GMT 2014
+#Fri May 30 15:54:31 CEST 2014
 port=1099
 tasklimit=5
 strategy=HIGHEST_PRIORITY_FIRST
+basedir=C\:\\Users\\Jakub\\DCSN_base
