--- a/build.xml
+++ b/build.xml
@@ -1,73 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="DCSN_server" default="default" basedir=".">
-    <description>Builds, tests, and runs the project DCSN_server.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="DCSN_server" default="compile" basedir=".">
+    <description>Builds and runs the DCSN server application.</description>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    <!-- directories -->
+    <property name="src.dir" value="${basedir}/src"/>
+    <property name="build.dir" value="${basedir}/build"/>
+    <property name="lib.dir" value="${basedir}/libs"/>
+    <property name="doc.dir" value="${basedir}/docs"/>
+    <property name="dist.dir" value="${basedir}/dist"/>
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+    <!-- application name etc -->
+    <property name="app.jar.name" value="DCSNServer"/>
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+    <!-- Define the project classpath -->
+    <path id="project.classpath">
+        <fileset dir="${lib.dir}">
+            <include name="**/*.jar"/>
+        </fileset>
+        <pathelement path="${build.dir}"/>
+    </path>
 
-    Example of inserting an obfuscator after compilation could look like this:
+    <target name="clean" description="Clean the build">
+        <delete dir="${build.dir}"/>
+        <delete dir="${doc.dir}"/>
+        <delete dir="${dist.dir}"/>
+        <delete file="server.config.properties"/>
+        <delete file="server.current_plans.log"/>
+        <delete file="server.current_tasks.log"/>
+        <delete file="server.main.log"/>
+        <delete file="server.projects_current_clients.log"/>
+        <delete file="server.projects_possible_clients.log"/>
+    </target>
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+    <target name="init" depends="clean" description="Initialize directory structure">
+        <mkdir dir="${build.dir}"/>
+        <mkdir dir="${doc.dir}"/>
+        <mkdir dir="${dist.dir}"/>
+    </target>
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+    <target name="javadoc" description="Generate javadoc documentation">
+        <javadoc destdir="${doc.dir}" windowtitle="DCSN-Server" sourcepath="${src.dir}">
+            <classpath refid="project.classpath"/>
+        </javadoc>
+        <echo>Generated javadoc is in the ${doc.dir} directory</echo>
+    </target>
 
+    <target name="compile" depends="init" description="Compile the application">
+        <javac includeantruntime="false" srcdir="${src.dir}"
+               destdir="${build.dir}">
+            <classpath refid="project.classpath"/>
+        </javac>
+    </target>
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+    <target name="run" depends="init, compile" description="Run the application">
+        <java classname="cz.cuni.mff.bc.server.ServerMain">
+            <classpath refid="project.classpath"/>
+        </java>
+    </target>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="DCSN_server-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+    <target name="jar" depends="init,compile" description="Generate JAR file containing application files">
+        <jar jarfile="${dist.dir}/${app.jar.name}.jar"
+             basedir="${build.dir}"/>
+    </target>
 </project>
